--- a/main.css
+++ b/main.css
@@ -85,8 +85,6 @@ body {
 .social {
     width: 50px;
     height: 40px;
-    margin-left: auto;
-    margin-right: auto;
     font-size: 30px;
     padding-top: 10px;
 }
@@ -134,4 +132,8 @@ body {
 
 #spotify:hover {
     background-color: forestgreen;
+}
+
+.contact-form {
+    border-radius: 5px;
 }
